tests/ui/const-generics/fn-const-param-infer.full.stderr
error[E0741]: using function pointers as const generic parameters is forbidden
  --> $DIR/fn-const-param-infer.rs:6:25
   |
LL | struct Checked<const F: fn(usize) -> bool>;
   |                         ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0741`.
